# magia

./: .gitignore  Cargo.toml  LICENSE  README.md  code-of-conduct.md
magia-cli/: Cargo.toml
magia-cli/src/: assembly_debugger.rs  main.rs
magia-core/: Cargo.toml
magia-core/src/: kickstart.rs  lib.rs
magia-cpu/: Cargo.toml  build.rs
magia-cpu-r68k/: Cargo.toml
magia-cpu-r68k/src/: lib.rs
magia-cpu-r68k/src/cpu/: effective_address.rs  mod.rs
magia-cpu-r68k/src/cpu/ops/: common.rs  handlers.rs
magia-cpu-r68k/src/ram/: mod.rs
magia-cpu/benches/: bench.rs
magia-cpu/examples/: asm.rs
magia-cpu/src/: constants.rs  cpu_config.pest  gen_config.txt  interrupts.rs  lib.rs  musashi.rs  ops.rs
magia-cpu/src/cpu/: mod.rs  operator.rs
magia-cpu/src/cpu/ops/: handlers.rs  mod.rs  opcodes.rs
magia-cpu/src/ram/: pagedmem.rs
magia-disassembler/: Cargo.toml
magia-disassembler/src/: codestream.rs  lib.rs
magia-disassembler/tests/: decode_tests.rs
magia-disassembler/tests/tests/: support.rs
vasm/: Cargo.toml  build.rs
vasm/src/: lib.rs
vasm/vasm_c/: atom.c  atom.h  cond.c  error.c  error.h  output_hunk.c  parse.c  supp.c  vasm.c  vasm.h
vasm/vasm_c/syntax/mot/: syntax.c
