[package]
name = "magia-cli"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.11"
pancurses = "0.16"
argparse = "0.2.1"
magia-core = { path = "../magia-core" }
